# CascLib

./: .gitignore  CMakeLists.txt
cmake/: Utilities.cmake
src/: CascBuildCfg.cpp  CascDumpData.cpp  CascLib.def  CascMndxRoot.cpp  CascOpenFile.cpp  CascOpenStorage.cpp  CascReadFile.cpp
src/common/: Common.cpp  FileStream.cpp  ListFile.cpp
